[ADD] unit testing for user and car

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:migrate:undo": "sequelize db:migrate:undo:all",
     "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all",
     "lint": "eslint ./**/*.js",
-    "lint:fix": "eslint --fix ./**/*.js"
+    "lint:fix": "eslint --fix ./**/*.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -31,8 +32,9 @@
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
     "jest": "^28.1.1",
     "nodemon": "^2.0.16",
-    "superjest": "^0.1.0"
+    "supertest": "^6.2.3"
   }
 }
