--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,23 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
-    "rules": {
-       "class-methods-use-this": ["error", { "enforceForClassFields": false }],
-       "linebreak-style": 0,
-       "no-unused-vars": "off",
-       "import/no-dynamic-require": "off",
-       "global-require": "off"
-    }
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true
+    // "jest/globals": true
+  },
+  "extends": ["airbnb-base"],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  // "plugins": ["jest"],
+  "rules": {
+    "class-methods-use-this": ["error", { "enforceForClassFields": false }],
+    "linebreak-style": 0,
+    "no-unused-vars": "off",
+    "import/no-dynamic-require": "off",
+    "global-require": "off",
+    "no-undef": "off",
+    "no-unreachable": "off",
+    "arrow-body-style": "off"
+  }
 }
