[ADD] enable plugin jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,14 @@
   "env": {
     "browser": true,
     "commonjs": true,
-    "es2021": true
-    // "jest/globals": true
+    "es2021": true,
+    "jest/globals": true
   },
   "extends": ["airbnb-base"],
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  // "plugins": ["jest"],
+  "plugins": ["jest"],
   "rules": {
     "class-methods-use-this": ["error", { "enforceForClassFields": false }],
     "linebreak-style": 0,
