--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all",
     "lint": "eslint ./**/*.js",
     "lint:fix": "eslint --fix ./**/*.js",
-    "test": "jest"
+    "test": "jest",
+    "test2": "jest ./test/Auth"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
