--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "global-require": "off",
     "no-undef": "off",
     "no-unreachable": "off",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "no-restricted-globals": "off"
   }
 }
